--- a/WebServer/wwwroot/css/site.css
+++ b/WebServer/wwwroot/css/site.css
@@ -2,44 +2,57 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     background: white;
+    font-family: Radiotechnika;
 }
 
 header {
-    width:80%;
-    padding: 15px 10%;
-    color:#fff;
+    width: 100%;
+    padding: 40px 10%;
+    color: #beff00;
     display: flexlex;
     justify-content: space-between;
     align-items: center;
     background: #333;
-    border-bottom: 2px solid #000;
 }
-header .logo{
-    font-weight: 600;
-    font-size: 25px;
 
+    header .logo {
+        font-size: 45px;
+    }
+
+    header nav a {
+        color: #fff;
+        text-decoration: none;
+    }
+
+        header nav a:hover {
+            text-decoration: underline
+        }
+
+main {
+    width: 80%;
+    padding: 15px 10%;
+    margin: 50px 0;
 }
-header nav a{
+
+div.form-group {
+    padding: 20px 10px 20px 10px;
+}
+
+input {
+    padding: 10px 20px;
+    border-radius: 15px;
+    border-color: #beff00;
+}
+
+footer {
+    margin-top: 50px;
+    text-align: center;
+    width: 100%;
+    padding: 40px 0;
     color: #fff;
-    text-decoration: none;
-    margin-left: 15px;
-
+    background: #333;
+    font-size: 10px;
 }
- header nav a:hover {text-decoration: underline}
-
- main{
-     width: 80%;
-     padding:15px 10%;
-     margin: 50px 0;
- }
- footer{
-     margin-top: 150px;
-     text-align: center;
-     width:100%;
-     padding:25px 0;
-     color: #fff;
-     background: #333;
-     border-top: 2px solid #000;
- }
