--- a/WebServer/Views/Shared/_Layout.cshtml
+++ b/WebServer/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <span class="logo">itProger</span>
+        <span class="logo">VBLuna</span>
         <nav>
             <a href="/">Главная</a>
             <a href="/monitoring">Мониторинг</a>
@@ -17,6 +17,6 @@
     <main>
         @RenderBody()
     </main>
-    <footer>Все права защищены. 2024</footer>
+    <footer>Этот сайт разрабатывается и модифицируется. 2024</footer>
 </body>
 </html>
