--- a/WebServer/Views/Monitoring/Results.cshtml
+++ b/WebServer/Views/Monitoring/Results.cshtml
@@ -1,5 +1,4 @@
-﻿<!-- Views/Monitoring/Results.cshtml -->
-@model List<string>
+﻿@model List<string>
 
 <h2>Результаты мониторинга</h2>
 
@@ -10,18 +9,20 @@
     }
 </ul>
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="/hub/monitoringHub"></script>
-<script>
-    var connection = new signalR.HubConnectionBuilder().withUrl("/monitoringHub").build();
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="/hub/monitoringHub"></script>
+    <script>
+        var connection = new signalR.HubConnectionBuilder().withUrl("/monitoringHub").build();
 
-    connection.on("ReceiveResult", function (result) {
-        $("#resultsList").append("<li>" + result + "</li>");
-    });
+        connection.on("ReceiveResult", function (result) {
+            $("#resultsList").append("<li>" + result + "</li>");
+        });
 
-    connection.start().then(function () {
-        console.log("SignalR connected.");
-    }).catch(function (err) {
-        return console.error(err.toString());
-    });
-</script>
+        connection.start().then(function () {
+            console.log("SignalR connected.");
+        }).catch(function (err) {
+            return console.error(err.toString());
+        });
+    </script>
+}
